# N-ary-Tree

./: CMakeLists.txt  README.md
Cases/: 3tree10.txt  test100_2.txt  test100_4.txt  test10_3.txt  test20_2.txt  test50000_2.txt  test5000_3.txt  test50_3.txt  test50_5.txt  tree2_10.txt  tree3_100.txt  tree4_200.txt  tree5_500.txt  tree6_1000.txt  tree7_5000.txt
Header Files/: FileGenerator.h  FileReader.h  FinderLongestOddPath.h  Node.h  PythonBridge.h
Python/: visualizer.py
Source Files/: FileGenerator.cpp  FileReader.cpp  FinderLongestOddPath.cpp  Node.cpp  PythonBridge.cpp  main.cpp
